Fix header size compared to traefik.io then fix alignments

--- a/src/assets/stylesheets/main/layout/_nav.scss
+++ b/src/assets/stylesheets/main/layout/_nav.scss
@@ -41,7 +41,6 @@
   // List title
   &__title {
     display: block;
-    padding: 0 px2rem(12px);
     overflow: hidden;
     font-weight: 700;
     text-overflow: ellipsis;
